# grep-reader

./: Cargo.toml
src/: grep.rs  lib.rs
src/grep/: grep_bin.rs  grep_lib.rs
tests/: xyz.rs
